// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AsyncParallelBailHook > callAsync empty 1`] = `
[
  [
    1,
  ],
  [
    2,
  ],
  [
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncParallelBailHook > callAsync empty 2`] = `
[
  [
    1,
  ],
  [
    2,
  ],
  [
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncParallelBailHook > callAsync multi 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "hooks",
    0,
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncParallelBailHook > callAsync multi 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "hooks",
    0,
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncParallelBailHook > callAsync multi return error 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  "end",
  [
    [Error: error-2],
  ],
]
`;

exports[`AsyncParallelBailHook > callAsync multi return error 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  "end",
  [
    [Error: error-2],
  ],
]
`;

exports[`AsyncParallelBailHook > callAsync multi return value 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  "end",
  [
    null,
    4,
  ],
]
`;

exports[`AsyncParallelBailHook > callAsync multi return value 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  "end",
  [
    null,
    4,
  ],
]
`;

exports[`AsyncParallelBailHook > callAsync single 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "hooks",
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncParallelBailHook > callAsync single 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "hooks",
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncParallelBailHook > callAsync single return error 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  "end",
  [
    [Error: error],
  ],
]
`;

exports[`AsyncParallelBailHook > callAsync single return error 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  "end",
  [
    [Error: error],
  ],
]
`;

exports[`AsyncParallelBailHook > callAsync single return value 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  "end",
  [
    [Error: error],
  ],
]
`;

exports[`AsyncParallelBailHook > callAsync single return value 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  "end",
  [
    [Error: error],
  ],
]
`;

exports[`AsyncParallelBailHook > promise reject multi return value 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "error",
  ],
  [
    4,
  ],
]
`;

exports[`AsyncParallelBailHook > promise reject multi return value 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "error",
  ],
  [
    4,
  ],
]
`;

exports[`AsyncParallelBailHook > promise reject single return value 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "error",
  ],
  [
    4,
  ],
]
`;

exports[`AsyncParallelBailHook > promise reject single return value 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "error",
  ],
  [
    4,
  ],
]
`;

exports[`AsyncParallelBailHook > promise resolve multi 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "hooks",
    0,
    3,
  ],
  [
    "end",
  ],
  [
    undefined,
  ],
]
`;

exports[`AsyncParallelBailHook > promise resolve multi 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "hooks",
    0,
    3,
  ],
  [
    "end",
  ],
  [
    undefined,
  ],
]
`;

exports[`AsyncParallelBailHook > promise resolve multi return value 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "end",
  ],
  [
    4,
  ],
]
`;

exports[`AsyncParallelBailHook > promise resolve multi return value 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "end",
  ],
  [
    4,
  ],
]
`;

exports[`AsyncParallelBailHook > promise resolve single 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "hooks",
    3,
  ],
  [
    "end",
  ],
  [
    undefined,
  ],
]
`;

exports[`AsyncParallelBailHook > promise resolve single 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "hooks",
    3,
  ],
  [
    "end",
  ],
  [
    undefined,
  ],
]
`;

exports[`AsyncParallelBailHook > promise resolve single return value 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "end",
  ],
  [
    4,
  ],
]
`;

exports[`AsyncParallelBailHook > promise resolve single return value 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "end",
  ],
  [
    4,
  ],
]
`;
